--- a/creditcardguide/src/main/res/layout/view_front_credit_card.xml
+++ b/creditcardguide/src/main/res/layout/view_front_credit_card.xml
@@ -116,7 +116,7 @@
                     android:textSize="9sp" />
 
 
-                <TextView
+                <movile.com.creditcardguide.view.FontFitTextView
                     android:id="@+id/txt_expire_credit_card"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -128,6 +128,7 @@
                     android:clickable="false"
                     android:textColor="@color/white"
                     android:textSize="15sp"
+                    mask:maxFontSize="15sp"
                     android:shadowColor="@color/gray_hard_text"
                     android:shadowDx="1"
                     android:shadowDy="1"
