--- a/creditcardguide/src/main/res/layout/view_back_credit_card.xml
+++ b/creditcardguide/src/main/res/layout/view_back_credit_card.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:mask="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/frg_input_card_back"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:visibility="gone"
-    android:paddingTop="10dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp">
+             xmlns:mask="http://schemas.android.com/apk/res-auto"
+             android:id="@+id/frg_input_card_back"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:paddingLeft="22dp"
+             android:paddingRight="22dp"
+             android:paddingTop="10dp"
+             android:visibility="gone"
+    >
 
     <!--tools:showIn="@layout/fragment_input_credit_card"-->
 
@@ -17,48 +17,68 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:src="@drawable/default_card_back" />
+        android:src="@drawable/default_card_back"
+        />
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="20dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="24dp">
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
+        >
 
-        <ImageView
-            android:id="@+id/view_back_card_image_sign"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/sign_diners"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:paddingEnd="24dp"
+            android:paddingLeft="14dp"
+            android:paddingRight="24dp"
+            android:paddingStart="14dp"
+            >
 
+            <ImageView
+                android:id="@+id/view_back_card_image_sign"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/sign_diners"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_gravity="end"
                 android:orientation="vertical"
-                android:layout_gravity="right">
+                >
 
                 <movile.com.creditcardguide.view.FontFitTextView
                     android:id="@+id/back_credit_card_txt_cvv"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="000"
-                    android:singleLine="true"
-                    android:maxLines="1"
-                    android:tag="o"
                     android:background="@color/white"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:tag="o"
+                    android:text="000"
                     android:textColor="@color/gray_hard_text"
                     android:textSize="16sp"
-                    mask:maxFontSize="16sp"/>
+                    mask:maxFontSize="16sp"
+                    />
 
             </LinearLayout>
 
+        </FrameLayout>
 
-    </FrameLayout>
+        <ImageView
+            android:id="@+id/view_reversed_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+    </LinearLayout>
 
 </FrameLayout>
